# bklg2devops-func

./: README.md  pyproject.toml  requirements.txt
azfunc/: __init__.py
bklg2devops/: __init__.py
tests/: test_azfunc.py
